fix: Tmux logo too big

--- a/src/components/SkillsStyles.scss
+++ b/src/components/SkillsStyles.scss
@@ -45,6 +45,9 @@
       .figma_logo {
         height: 30px;
       }
+      .tmux_logo{
+        height: 40px;
+      }
     }
   }
 
